Adding basic HTML structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav></nav>
+    </header>
+    <main>
+        <div id="logo"></div>
+        <div id="search"></div>
+        <div id="lang"></div>
+    </main>
+    <footer>
+        <div id="footer-text"></div>
+        <div id="footer-links"></div>
+    </footer>
 </body>
 </html>
