Add Google Icons + Adding links to nav

--- a/index.html
+++ b/index.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 </head>
+
 <body>
-    <header>
-        <nav></nav>
-    </header>
-    <main>
-        <div id="logo"></div>
-        <div id="search"></div>
-        <div id="lang"></div>
-    </main>
-    <footer>
-        <div id="footer-text"></div>
-        <div id="footer-links"></div>
-    </footer>
+    <div id="container">
+        <nav>
+            <div>
+                <a href="">Gmail</a>
+                <a href="">Images</a>
+            </div>
+            <div></div>
+            <div></div>
+        </nav>
+        <main>
+            <div id="logo"></div>
+            <div id="search"></div>
+            <div id="lang"></div>
+        </main>
+        <footer>
+            <div id="footer-text"></div>
+            <div id="footer-links"></div>
+        </footer>
+    </div>
 </body>
+
 </html>
