Creating and designing nav - links + apps button + user img

--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
 <body>
     <div id="container">
         <nav>
-            <div>
+            <div id="nav-links">
                 <a href="">Gmail</a>
                 <a href="">Images</a>
             </div>
-            <div></div>
-            <div></div>
+            <div id="nav-apps">
+                <a href="#">
+                    <span class="material-icons">apps</span>
+                </a>
+            </div>
+            <div id="nav-user">
+                <a href="">
+                    <img src="https://lh3.googleusercontent.com/ogw/ADGmqu_nK5iZSie2MkiRJx0-NyDkkI_S5Hu22wJnfO1qHw=s64-c-mo" alt="User Photo">
+                </a>
+            </div>
         </nav>
         <main>
             <div id="logo"></div>
