Correction of the #search-buttons id

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             fill="#ea4335"></path>
                     </svg>
                 </div>
-                <div id="searc-buttons">
+                <div id="search-buttons">
                     <input type="submit" value="Google Search">
                     <input type="submit" value="I'm Feeling Lucky">
                 </div>
