--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
+    <link rel="shortcut icon" type="image/png" href="https://www.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png" />
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -24,14 +25,12 @@
             </div>
             <div id="nav-user">
                 <a href="">
-                    <img src="https://lh3.googleusercontent.com/ogw/ADGmqu_nK5iZSie2MkiRJx0-NyDkkI_S5Hu22wJnfO1qHw=s64-c-mo"
-                        alt="User Photo">
+                    <img src="https://lh3.googleusercontent.com/ogw/ADGmqu_nK5iZSie2MkiRJx0-NyDkkI_S5Hu22wJnfO1qHw=s64-c-mo" alt="User Photo">
                 </a>
             </div>
         </nav>
         <div id="logo">
-            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
-                alt="Google Logo">
+            <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Logo">
         </div>
         <div id="search-container">
             <form action="" method="get" id="search">
