--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Logo">
         </div>
         <div id="search-container">
-            <form action="" method="get" id="search">
+            <form action="#" method="post" id="search">
                 <div id="searchbar">
                     <span class="material-icons search-icon">
                         search
@@ -64,6 +64,8 @@
             <div id="footer-links"></div>
         </footer>
     </div>
+    <script>
+    </script>
 </body>
 
 </html>
