Adding text and links for the footer

--- a/index.html
+++ b/index.html
@@ -60,8 +60,21 @@
         </div>
         <div id="lang"></div>
         <footer>
-            <div id="footer-text"></div>
-            <div id="footer-links"></div>
+            <div id="footer-text">France</div>
+            <div id="footer-links">
+                <div id="footer-left">
+                    <a href="">About</a>
+                    <a href="">Advertising</a>
+                    <a href="">Business</a>
+                    <a href="">How Search works</a>
+                </div>
+                <div id="footer-right">
+                    <a href="">Consumer Information</a>
+                    <a href="">Privacy</a>
+                    <a href="">Terms</a>
+                    <a href="">Settings</a>
+                </div>
+            </div>
         </footer>
     </div>
     <script>
