--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="shortcut icon" type="image/png" href="https://www.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png" />
@@ -15,8 +14,8 @@
     <div id="container">
         <nav>
             <div id="nav-links">
-                <a href="">Gmail</a>
-                <a href="">Images</a>
+                <a href="https://mail.google.com/">Gmail</a>
+                <a href="https://www.google.fr/imghp">Images</a>
             </div>
             <div id="nav-apps">
                 <a href="#">
@@ -24,7 +23,7 @@
                 </a>
             </div>
             <div id="nav-user">
-                <a href="">
+                <a href="https://accounts.google.com/">
                     <img src="https://lh3.googleusercontent.com/ogw/ADGmqu_nK5iZSie2MkiRJx0-NyDkkI_S5Hu22wJnfO1qHw=s64-c-mo" alt="User Photo">
                 </a>
             </div>
@@ -33,8 +32,8 @@
             <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Logo">
         </div>
         <div id="search-container">
-            <form action="#" method="post" id="search">
-                <div id="searchbar">
+            <form action="#" method="get" id="search">
+                <label for="searchinput" id="searchbar">
                     <span class="material-icons search-icon">
                         search
                     </span>
@@ -51,7 +50,7 @@
                             d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z"
                             fill="#ea4335"></path>
                     </svg>
-                </div>
+                </label>
                 <div id="search-buttons">
                     <input type="submit" value="Google Search">
                     <input type="submit" value="I'm Feeling Lucky">
@@ -63,15 +62,15 @@
             <div id="footer-text">France</div>
             <div id="footer-links">
                 <div id="footer-left">
-                    <a href="">About</a>
-                    <a href="">Advertising</a>
-                    <a href="">Business</a>
-                    <a href="">How Search works</a>
+                    <a href="https://about.google/">About</a>
+                    <a href="https://ads.google.com/">Advertising</a>
+                    <a href="https://smallbusiness.withgoogle.com/">Business</a>
+                    <a href="https://www.google.com/search/howsearchworks/">How Search works</a>
                 </div>
                 <div id="footer-right">
-                    <a href="">Consumer Information</a>
-                    <a href="">Privacy</a>
-                    <a href="">Terms</a>
+                    <a href="https://support.google.com/websearch/answer/7585859">Consumer Information</a>
+                    <a href="https://policies.google.com/privacy">Privacy</a>
+                    <a href="https://policies.google.com/terms">Terms</a>
                     <a href="">Settings</a>
                 </div>
             </div>
